tests/rosetta/out/C/cheryls-birthday.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:59:07Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:59:07Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
typedef struct birthday_t birthday_t;

typedef struct birthday_t {
  int month;
  int day;
} birthday_t;
typedef struct {
  int len;
  birthday_t *data;
} birthday_list_t;
birthday_list_t create_birthday_list(int len) {
  birthday_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(birthday_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int monthUnique(birthday_t *b, int list) {
  int c = 0;
  for (int tmp1 = 0; tmp1 < list.len; tmp1++) {
    birthday_t x = list.data[tmp1];
    if (x.month == b->month) {
      c = c + 1;
    }
  }
  return c == 1;
}

int dayUnique(birthday_t *b, int list) {
  int c = 0;
  for (int tmp2 = 0; tmp2 < list.len; tmp2++) {
    birthday_t x = list.data[tmp2];
    if (x.day == b->day) {
      c = c + 1;
    }
  }
  return c == 1;
}

int monthWithUniqueDay(birthday_t *b, int list) {
  for (int tmp3 = 0; tmp3 < list.len; tmp3++) {
    birthday_t x = list.data[tmp3];
    if (x.month == b->month && dayUnique(&x, list)) {
      return 1;
    }
  }
  return 0;
}

char *bstr(birthday_t *b) {
  list_string months = list_string_create(13);
  months.data[0] = "";
  months.data[1] = "January";
  months.data[2] = "February";
  months.data[3] = "March";
  months.data[4] = "April";
  months.data[5] = "May";
  months.data[6] = "June";
  months.data[7] = "July";
  months.data[8] = "August";
  months.data[9] = "September";
  months.data[10] = "October";
  months.data[11] = "November";
  months.data[12] = "December";
  char *tmp4 = _str(b->day);
  return months.data[b->month] + " " + tmp4;
}

int _mochi_main() {
  birthday_t choices[] = {
      (birthday_t){.month = 5, .day = 15}, (birthday_t){.month = 5, .day = 16},
      (birthday_t){.month = 5, .day = 19}, (birthday_t){.month = 6, .day = 17},
      (birthday_t){.month = 6, .day = 18}, (birthday_t){.month = 7, .day = 14},
      (birthday_t){.month = 7, .day = 16}, (birthday_t){.month = 8, .day = 14},
      (birthday_t){.month = 8, .day = 15}, (birthday_t){.month = 8, .day = 17}};
  int choices_len = sizeof(choices) / sizeof(choices[0]);
  birthday_list_t filtered = {0, NULL};
  for (int tmp5 = 0; tmp5 < choices_len; tmp5++) {
    birthday_t bd = choices[tmp5];
    if ((!monthUnique(&bd, choices))) {
      birthday_list_t tmp6 = create_birthday_list(filtered.len + 1);
      for (int i7 = 0; i7 < filtered.len; i7++) {
        tmp6.data[i7] = filtered.data[i7];
      }
      tmp6.data[filtered.len] = bd;
      tmp6.len = filtered.len + 1;
      filtered = tmp6;
    }
  }
  birthday_list_t filtered2 = {0, NULL};
  for (int tmp8 = 0; tmp8 < filtered.len; tmp8++) {
    birthday_t bd = filtered.data[tmp8];
    if ((!monthWithUniqueDay(&bd, filtered))) {
      birthday_list_t tmp9 = create_birthday_list(filtered2.len + 1);
      for (int i10 = 0; i10 < filtered2.len; i10++) {
        tmp9.data[i10] = filtered2.data[i10];
      }
      tmp9.data[filtered2.len] = bd;
      tmp9.len = filtered2.len + 1;
      filtered2 = tmp9;
    }
  }
  birthday_list_t filtered3 = {0, NULL};
  for (int tmp11 = 0; tmp11 < filtered2.len; tmp11++) {
    birthday_t bd = filtered2.data[tmp11];
    if (dayUnique(&bd, filtered2)) {
      birthday_list_t tmp12 = create_birthday_list(filtered3.len + 1);
      for (int i13 = 0; i13 < filtered3.len; i13++) {
        tmp12.data[i13] = filtered3.data[i13];
      }
      tmp12.data[filtered3.len] = bd;
      tmp12.len = filtered3.len + 1;
      filtered3 = tmp12;
    }
  }
  birthday_list_t filtered4 = {0, NULL};
  for (int tmp14 = 0; tmp14 < filtered3.len; tmp14++) {
    birthday_t bd = filtered3.data[tmp14];
    if (monthUnique(&bd, filtered3)) {
      birthday_list_t tmp15 = create_birthday_list(filtered4.len + 1);
      for (int i16 = 0; i16 < filtered4.len; i16++) {
        tmp15.data[i16] = filtered4.data[i16];
      }
      tmp15.data[filtered4.len] = bd;
      tmp15.len = filtered4.len + 1;
      filtered4 = tmp15;
    }
  }
  if (filtered4.len == 1) {
    printf("%s\n", "Cheryl's birthday is " + bstr(&filtered4.data[0]));
  } else {
    printf("Something went wrong!\n");
  }
  return 0;
}
int main() { return _mochi_main(); }
